--- a/Sandbox NLP Diplo UChamp.ipynb
+++ b/Sandbox NLP Diplo UChamp.ipynb
@@ -151,9 +151,10 @@
     "    match = {}\r\n",
     "    match[\"start\"] = token.idx\r\n",
     "    match[\"end\"]   = token.idx + len(token)\r\n",
-    "    match[\"label\"] = token.pos_\r\n",
-    "    matches.append(match)\r\n",
-    "    all_ents.add(token.pos_)\r\n",
+    "    mmatch[\"label\"] = token.pos_\r\n",
+    "    if token.pos_ != \"SPACE\":\r\n",
+    "        matches.append(match)\r\n",
+    "        all_ents.add(token.pos_)\r\n",
     "    \r\n",
     "sentence = [{\r\n",
     "    \"text\": doc.text,\r\n",
