fix: error de tipeo que hacía saltar NameError!

--- a/Sandbox NLP Diplo UChamp.ipynb
+++ b/Sandbox NLP Diplo UChamp.ipynb
@@ -151,7 +151,7 @@
     "    match = {}\r\n",
     "    match[\"start\"] = token.idx\r\n",
     "    match[\"end\"]   = token.idx + len(token)\r\n",
-    "    mmatch[\"label\"] = token.pos_\r\n",
+    "    match[\"label\"] = token.pos_\r\n",
     "    if token.pos_ != \"SPACE\":\r\n",
     "        matches.append(match)\r\n",
     "        all_ents.add(token.pos_)\r\n",
